--- a/src/main/resources/templates/myPage/index.html
+++ b/src/main/resources/templates/myPage/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>마이페이지 | Phantom Books</title>
+  <title>마이페이지</title>
 
   <link rel="stylesheet" href="/css/myPage/index.css">
 </head>
